# cargo-call-stack

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md
.github/: bors.toml
.github/workflows/: ci.yml
ci/: script.sh
cortex-m-examples/: Cargo.toml  build.rs
cortex-m-examples/.cargo/: config.toml
cortex-m-examples/examples/: core-fmt.rs  cycle.rs  defmt.rs  div64.rs  fmt.rs  fmul.rs  fn.rs  memcmp-no.rs  panic-fmt.rs  to.rs
firmware/: .gitignore  Cargo.toml  rust-toolchain.toml
firmware/examples/: abs-i32.rs  cycle.rs  div64.rs  dynamic-dispatch.rs  fmul.rs  function-pointer-ptr.rs  function-pointer.rs  memcmp-ir-no-call.rs  panic-fmt.rs
src/: ir.pest  ir.rs  main.rs  thumb.rs  wrapper.rs
src/ir/: define.rs  item.rs  ty.rs
src/ir/define/: parse1.ll  parse10.ll  parse11.ll  parse2.ll  parse3.ll  parse4.ll  parse5.ll  parse6.ll  parse7.ll  parse8.ll  parse9.ll
tests/: examples.rs  firmware.rs  minimal.ll
