[package]
authors = [
  "Jorge Aparicio <jorge@japaric.io>",
  "Per Lindgren <per.lindgren@ltu.se>",
]
categories = ["command-line-utilities", "no-std"]
description = "Whole program static stack analysis"
edition = "2018"
keywords = ["stack", "analysis", "call", "graph"]
license = "MIT OR Apache-2.0"
name = "cargo-call-stack"
readme = "README.md"
repository = "https://github.com/japaric/cargo-call-stack"
version = "0.1.2"

[dependencies]
cargo-project = "0.2.1"
clap = "2.32.0"
either = "1.5.0"
env_logger = "0.6.0"
failure = "0.1.3"
log = "0.4.6"
nom = "4.2.1"
petgraph = "0.4.13"
rustc-demangle = "0.1.9"
rustc_version = "0.2.3"
stack-sizes = "0.3.1"
xmas-elf = "0.6.2"
