[package]
authors = [
  "Jorge Aparicio <jorge@japaric.io>",
  "Per Lindgren <per.lindgren@ltu.se>",
]
categories = ["command-line-utilities", "no-std"]
description = "Static, whole program stack usage analyzer"
edition = "2018"
keywords = ["stack", "analysis", "call", "graph"]
license = "MIT OR Apache-2.0"
name = "cargo-call-stack"
readme = "README.md"
repository = "https://github.com/japaric/cargo-call-stack"
version = "0.1.15"

[dependencies]
anyhow = "1"
ar = "0.9.0"
cargo-project = "0.3.0"
clap = { version = "4.1.6", features = ["derive"] }
env_logger = "0.10.0"
filetime = "0.2.20"
log = "0.4.17"
nom = "7.1.3"
petgraph = "0.6.3"
rustc-demangle = "0.1.21"
rustc_version = "0.4.0"
stack-sizes = "0.5.0"
walkdir = "2.3.2"
xmas-elf = "0.9.0"
