[package]
authors = ["Jorge Aparicio <jorge@japaric.io>"]
edition = "2018"
readme = "README.md"
name = "app"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.5"
cortex-m-rt = "0.7.1"
cortex-m-semihosting = "0.5.0"
defmt = "0.3.2"
panic-halt = "0.2.0"
defmt-rtt = "0.3.2"

[features]
default = ["defmt-default"]
defmt-default = []
defmt-error = []
defmt-warn = []
defmt-info = []
defmt-debug = []
defmt-trace = []

[profile.release]
codegen-units = 1
debug = true
lto = true
